# tez

./: Cargo.toml
src/: actions.rs  app.rs  cli.rs  config.rs  events.rs  main.rs  searcher.rs  state.rs  tui.rs  utils.rs
src/config/: binds.rs  cli.rs  common.rs  full.rs  mod.rs  partial.rs  scripts.rs
src/tui/: input.rs  lazy.rs  list.rs  mod.rs
src/types/: action.rs  alignment.rs  bind.rs  extent.rs  key.rs  mod.rs
src/utils/: alignment.rs  extent.rs  mod.rs
