[package]
name = "tez"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.28.1"
derive_more = { version = "2.0.1", features = ["display", "from"] }
nucleo = "0.5.0"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.20"
tui-textarea = "0.7.0"
