[package]
name = "tez"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
derive_more = { version = "2.0.1", features = ["from"] }
futures = "0.3.31"
nucleo = "0.5.0"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tui-textarea = "0.7.0"
